--- a/PillsReminder/PillsReminder/Base.lproj/Main.storyboard
+++ b/PillsReminder/PillsReminder/Base.lproj/Main.storyboard
@@ -10,20 +10,19 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Today View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="PRTodayViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hvg-o3-ybJ">
+                            <navigationBar contentMode="scaleToFill" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hvg-o3-ybJ">
                                 <rect key="frame" x="0.0" y="20" width="375" height="44"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <color key="barTintColor" red="0.50778047400182591" green="0.68765717169501717" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <items>
-                                    <navigationItem title="Today" id="pP2-dc-1y3">
+                                    <navigationItem title="Take today" id="pP2-dc-1y3">
                                         <barButtonItem key="leftBarButtonItem" title="?" id="TEd-ZT-sKN"/>
                                         <barButtonItem key="rightBarButtonItem" title="?" id="2J7-Jy-Xn7"/>
                                     </navigationItem>
@@ -33,30 +32,47 @@
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="20"/>
                                 <color key="backgroundColor" red="0.50778047400000004" green="0.68765717169999996" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="20" id="to0-wL-ayI"/>
+                                    <constraint firstAttribute="height" constant="20" id="dS7-aa-hPI"/>
                                 </constraints>
                             </view>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dMQ-82-j9Y">
-                                <rect key="frame" x="116" y="318" width="142" height="30"/>
-                                <state key="normal" title="Notification received"/>
-                                <connections>
-                                    <action selector="notificationReceived:" destination="BYZ-38-t0r" eventType="touchUpInside" id="bG2-rx-CwL"/>
-                                </connections>
-                            </button>
+                            <tabBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Uii-Cv-nAe">
+                                <rect key="frame" x="0.0" y="618" width="375" height="49"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <items>
+                                    <tabBarItem systemItem="favorites" id="gaA-u9-nHI"/>
+                                    <tabBarItem systemItem="more" id="33L-cA-kbJ"/>
+                                </items>
+                            </tabBar>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="7uY-XF-bHD">
+                                <rect key="frame" x="0.0" y="64" width="375" height="554"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="dMQ-82-j9Y" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="3jB-sm-0MU"/>
-                            <constraint firstItem="vSr-w5-NNg" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="6e9-px-uyb"/>
-                            <constraint firstItem="vSr-w5-NNg" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="7jE-SP-Ry1"/>
-                            <constraint firstItem="dMQ-82-j9Y" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="Cde-XW-3LM"/>
-                            <constraint firstAttribute="trailing" secondItem="vSr-w5-NNg" secondAttribute="trailing" id="GEh-41-dje"/>
+                            <constraint firstItem="vSr-w5-NNg" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="1bb-VQ-ozx"/>
+                            <constraint firstItem="hvg-o3-ybJ" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="3bq-qx-2X2"/>
+                            <constraint firstItem="vSr-w5-NNg" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="Aol-Ae-8G5"/>
+                            <constraint firstItem="Uii-Cv-nAe" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="D10-Hh-n4N"/>
+                            <constraint firstItem="Uii-Cv-nAe" firstAttribute="top" secondItem="7uY-XF-bHD" secondAttribute="bottom" id="H9n-46-OXV"/>
+                            <constraint firstItem="hvg-o3-ybJ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="KJb-h2-230"/>
+                            <constraint firstItem="7uY-XF-bHD" firstAttribute="top" secondItem="hvg-o3-ybJ" secondAttribute="bottom" id="Vfo-wD-eS0"/>
+                            <constraint firstItem="Uii-Cv-nAe" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="XPM-8T-zQB"/>
+                            <constraint firstItem="7uY-XF-bHD" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="cah-pO-Vjr"/>
+                            <constraint firstItem="7uY-XF-bHD" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="djL-6U-WAH"/>
+                            <constraint firstAttribute="trailing" secondItem="vSr-w5-NNg" secondAttribute="trailing" id="dzF-pi-qJQ"/>
+                            <constraint firstItem="hvg-o3-ybJ" firstAttribute="top" secondItem="vSr-w5-NNg" secondAttribute="bottom" id="f4I-Pv-NI6"/>
+                            <constraint firstItem="Uii-Cv-nAe" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="qzM-qT-zbU"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
+                        <outlet property="navigationBar" destination="hvg-o3-ybJ" id="h7S-di-68g"/>
+                        <outlet property="navigationItem" destination="pP2-dc-1y3" id="Uc5-H6-DbG"/>
                         <outlet property="notificationBarButtonItem" destination="2J7-Jy-Xn7" id="CSW-h6-Yby"/>
                         <outlet property="patientBarButtonItem" destination="TEd-ZT-sKN" id="PLa-R1-tgV"/>
+                        <outlet property="tabBar" destination="Uii-Cv-nAe" id="4g4-OD-eQD"/>
+                        <outlet property="tableView" destination="7uY-XF-bHD" id="7NT-YU-KOp"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
